--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
   google_maps_flutter: ^2.2.5
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.9
+
+
 
 
 dev_dependencies:
